# CG

./: CMakeLists.txt
include/: MainWindow.h
include/entities/: Actor.h  Scene.h
include/geometry/: Intersection.h  Plane.h  Shape3.h  Sphere.h
include/graphics/: Actor.h  MainWindow.h  RayCast.h  RayCaster.h  RayModel.h
include/shapes/: Intersection.h  Plane.h  Shape3.h  Sphere.h
src/: Main.cpp  MainWindow.cpp
src/graphics/: MainWindow.cpp  RayCast.cpp  RayCaster.cpp
